--- a/src/app/shared/components/card-transactions/card-transactions.component.html
+++ b/src/app/shared/components/card-transactions/card-transactions.component.html
@@ -1,6 +1,6 @@
 <div class="bg-white rounded shadow-card p-4">
   <div class="flex items-center justify-between">
     <h2 class="font-bold">Transactions</h2>
-    <a routerLink="/transactions">View All</a>
+    <a routerLink="../transactions">View All</a>
   </div>
 </div>
