--- a/src/app/shared/components/card-budgets/card-budgets.component.html
+++ b/src/app/shared/components/card-budgets/card-budgets.component.html
@@ -1,6 +1,6 @@
 <div class="bg-white rounded shadow-card p-4">
   <div class="flex items-center justify-between">
     <h2 class="font-bold">Budgets</h2>
-    <a routerLink="/budgets">See Details</a>
+    <a routerLink="../budgets">See Details</a>
   </div>
 </div>
