--- a/src/app/shared/dashboards/dashboard/overview/overview.component.html
+++ b/src/app/shared/dashboards/dashboard/overview/overview.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-col justify-between min-h-screen">
+<div class="flex flex-col justify-between">
   <div class="mx-4 my-6">
     <div>
       <h1 class="font-bold text-2xl">Overview</h1>
@@ -16,5 +16,4 @@
       <app-card-recurring></app-card-recurring>
     </div>
   </div>
-  <app-header></app-header>
 </div>
