--- a/src/app/shared/components/side-bar/side-bar.component.html
+++ b/src/app/shared/components/side-bar/side-bar.component.html
@@ -1,7 +1,7 @@
-<div class="bg-primary-grey-900 h-[52px]">
+<div class="bg-primary-grey-900 h-[52px] rounded-t-md">
   <div class="h-full">
     <ul class="flex items-center justify-between h-full mx-5">
-      <li class="bg-white h-[44px] w-[70px] pt-2 pb-3">
+      <li class="bg-white h-[44px] w-[70px] pt-2 pb-3 rounded-t-md self-end">
         <a
           routerLink="overview"
           routerLinkActive="active"
